# docver

./: Cargo.toml  dist-workspace.toml
.github/workflows/: publish-docs.yml  release.yml
src/: git.rs  main.rs  versions.rs
src/commands/: deploy.rs  list.rs  mod.rs
