[package]
name = "versite"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ConnerPetzold/versite"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
git_cmd = "0.6.25"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
walkdir = "2.5.0"

[dev-dependencies]
insta = { version = "1.39.0", features = ["json"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
